# selling-volatility

./: .gitignore  README.md  pyproject.toml  settings.json  spread-backtest-settlement.py  spread-production-tastytrade.py  spread-production.py  strategy_handbook.md
docs/: account_monitor_design.md
src/: account-manager.py  destroy_tokens.py  experiment.ipynb  pnl-tracker.py  production-tastytrade.py  spread-production-tastytrade.py  spread-production.py  system-overview.md
src/backtest/: spread-backtest-settlement.py  spread-backtest.ipynb
src/backtest/backtest_tts_shuffle_False/: metrics.txt
src/backtest/backtest_tts_shuffle_True/: metrics.txt
src/feature-contracts/: automated-order-generation.md  greeks-event-plugin.md  market-data-streamer-core-infrastructure.md  plugin-system-architecture.md  pnl-tracking-system.md
